--- a/HaleyMVVM/HaleyMVVM.csproj
+++ b/HaleyMVVM/HaleyMVVM.csproj
@@ -39,13 +39,6 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <Compile Remove="_UnitTests\**" />
-    <EmbeddedResource Remove="_UnitTests\**" />
-    <None Remove="_UnitTests\**" />
-    <Page Remove="_UnitTests\**" />
-  </ItemGroup>
-  
-  <ItemGroup>
     <None Remove="Notes.txt" />
   </ItemGroup>
   
@@ -60,7 +53,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Haley.png">
+    <None Include="..\Haley.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
