--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -3,6 +3,9 @@ name: Nuget Publish
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '/README.md'
+      - '.gihub/workflows/*.yml'
   pull_request:
     branches: [ master ]
     paths-ignore:
