--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -32,11 +32,11 @@ jobs:
       with:
         fetch-depth: 0
 
-    # Install the .NET Core
+    # Install the .NET Core [latest version is 5.0.x]
     - name: Install .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: 3.0.x
 
     # Add  MSBuild 
     - name: Setup MSBuild.exe
