--- a/.github/workflows/buildVerification.yml
+++ b/.github/workflows/buildVerification.yml
@@ -1,4 +1,4 @@
-name: Nuget Publish
+name: Build and Publish
 
 on:
   push:
@@ -32,11 +32,11 @@ jobs:
       with:
         fetch-depth: 0
 
-    # Install the .NET Core
+    # Install the .NET Core [latest version is 5.0.x]
     - name: Install .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: 3.1.x #
 
     # Add  MSBuild 
     - name: Setup MSBuild.exe
@@ -54,9 +54,16 @@ jobs:
       env:
         Configuration: ${{ matrix.configuration }}
 
-   #Publish to Nuget
+    #Extract Branch Name
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
+
+    #Publish to Nuget
     - name: Publish to NuGet
       uses: brandedoutcast/publish-nuget@v2
+      if: ${{ steps.extract_branch.outputs.branch }} = master
       env:
         ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
       with:
