--- a/.github/workflows/masterbuild.yml
+++ b/.github/workflows/masterbuild.yml
@@ -55,7 +55,7 @@ jobs:
         Configuration: ${{ matrix.configuration }}
 
   publish:
-
+    needs: build # So build is first executed
     strategy:
       matrix:
         configuration: [Release]
@@ -72,27 +72,6 @@ jobs:
       with:
         fetch-depth: 0
 
-    # Install the .NET Core [latest version is 5.0.x]
-    - name: Install .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.x #
-
-    # Add  MSBuild 
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@2008f912f56e61277eefaac6d1888b750582aa16
-      env:
-        ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-
-    # Execute all unit tests in the solution
-    - name: Execute unit tests
-      run: dotnet test
-
-    # Restore the application to populate the obj folder with RuntimeIdentifiers
-    - name: Restore the application
-      run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
-      env:
-        Configuration: ${{ matrix.configuration }}
     #Extract Branch Name
     #- name: Extract branch name
     #  shell: bash
