--- a/.github/workflows/masterbuild.yml
+++ b/.github/workflows/masterbuild.yml
@@ -6,11 +6,11 @@ on:
     paths-ignore:
       - '**.md'
       - '.gihub/workflows/**.yml'
-  pull_request:
-    branches: [ master ]
-    paths-ignore:
-      - '**.md'
-      - '.gihub/workflows/**.yml'
+  #pull_request:
+   # branches: [ master ]
+    #paths-ignore:
+     # - '**.md'
+     # - '.gihub/workflows/**.yml'
 
 jobs:
 
