--- a/.github/workflows/masterbuild.yml
+++ b/.github/workflows/masterbuild.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
     paths-ignore:
       - '**.md'
-      - '.gihub/workflows/**.yml'
+      - '.github/workflows/**.yml'
   #pull_request:
    # branches: [ master ]
     #paths-ignore:
