--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -5,11 +5,11 @@ on:
     paths-ignore:
       - '**.md'
       - '.github/workflows/**.yml'
-  pull_request:
-    branches: [ development ]
-    paths-ignore:
-      - '**.md'
-      - '.github/workflows/**.yml'
+  #pull_request:
+   # branches: [ development ]
+   # paths-ignore:
+   #   - '**.md'
+   #   - '.github/workflows/**.yml'
 
 jobs:
 
