--- a/HaleyMVVM/HaleyMVVM.csproj
+++ b/HaleyMVVM/HaleyMVVM.csproj
@@ -4,7 +4,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>Haley.MVVM</AssemblyName>
     <RootNamespace>Haley.MVVM</RootNamespace>
-    <Version>6.0.0-prelease</Version>
+    <Version>6.0.0</Version>
     <Authors>The Haley Project</Authors>
     <Product>Haley MVVM Core</Product>
     <Company>TheHaleyProject</Company>
@@ -127,7 +127,7 @@ Added new Attached Property ControlRetriever which will be helpful to retrieved 
     </When>
     <Otherwise>
      <ItemGroup>
-       <PackageReference Include="Haley.IOC" Version="2.0.2" />
+       <PackageReference Include="Haley.IOC" Version="3.0.0" />
 	 </ItemGroup>
     </Otherwise>
 </Choose>  
