--- a/HaleyMVVM/HaleyMVVM.csproj
+++ b/HaleyMVVM/HaleyMVVM.csproj
@@ -4,7 +4,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>Haley.MVVM</AssemblyName>
     <RootNamespace>Haley.MVVM</RootNamespace>
-    <Version>6.0.1</Version>
+    <Version>6.0.1.1</Version>
     <Authors>The Haley Project</Authors>
     <Product>Haley MVVM Core</Product>
     <Company>TheHaleyProject</Company>
@@ -16,7 +16,7 @@
     <Copyright>Haley @ 2020</Copyright>
     <PackageReleaseNotes>Removed obsolete methods.
 Now, Windows/Controls doesn't need IHaleyWindow or IHaleyControl interface to be added. 
-Added new Attached Property ControlRetriever which will be helpful to retrieved registered controls to view</PackageReleaseNotes>
+Added new Attached Property ControlRetriever which will be helpful to retrieved registered controls to view.</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>4.0.2.0</AssemblyVersion>
     <FileVersion>4.0.2.0</FileVersion>
