--- a/_TESTING/NotificationDemo/NotificationDemo.csproj
+++ b/_TESTING/NotificationDemo/NotificationDemo.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{A3BD5E82-C41B-43D9-A4D4-1363A15D2610}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>NotificationDemo</RootNamespace>
-    <AssemblyName>NotificationDemo</AssemblyName>
+    <AssemblyName>Notification.Demo</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
