--- a/_TESTING/NotificationDemo/NotificationDemo.csproj
+++ b/_TESTING/NotificationDemo/NotificationDemo.csproj
@@ -114,13 +114,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Haley.Extensions">
-      <Version>2.0.2</Version>
+      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Haley.IOC">
-      <Version>3.0.2</Version>
+      <Version>3.0.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
-      <Version>1.1.31</Version>
+      <Version>1.1.39</Version>
     </PackageReference>
     <PackageReference Include="protobuf-net">
       <Version>3.0.101</Version>
@@ -132,7 +132,7 @@
       <Version>4.5.1</Version>
     </PackageReference>
     <PackageReference Include="System.Collections.Immutable">
-      <Version>5.0.0</Version>
+      <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Drawing.Common">
       <Version>5.0.2</Version>
@@ -144,7 +144,7 @@
       <Version>4.5.0</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>5.0.0</Version>
+      <Version>6.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -176,7 +176,7 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <PackageReference Include="Haley.MVVM" Version="6.0.8-development-1" />
+        <PackageReference Include="Haley.MVVM" Version="6.1.2" />
       </ItemGroup>
     </Otherwise>
   </Choose>
