--- a/_TESTING/NotificationDemo/NotificationDemo.csproj
+++ b/_TESTING/NotificationDemo/NotificationDemo.csproj
@@ -113,12 +113,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Haley.Extensions">
-      <Version>2.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="Haley.IOC">
-      <Version>3.0.3</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
       <Version>1.1.39</Version>
     </PackageReference>
@@ -135,7 +129,7 @@
       <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Drawing.Common">
-      <Version>5.0.2</Version>
+      <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Memory">
       <Version>4.5.4</Version>
@@ -180,4 +174,33 @@
       </ItemGroup>
     </Otherwise>
   </Choose>
+	<Choose>
+		<When Condition="Exists($(HaleyExtensions))">
+			<ItemGroup>
+				<ProjectReference Include="$(HaleyExtensions)\HaleyExtensions.csproj">
+					<Name>HaleyExtensions</Name>
+				</ProjectReference>
+			</ItemGroup>
+		</When>
+		<Otherwise>
+			<ItemGroup>
+				<PackageReference Include="Haley.Extensions" Version="2.1.0" />
+			</ItemGroup>
+		</Otherwise>
+	</Choose>
+
+	<Choose>
+		<When Condition="Exists($(HaleyIOC))">
+			<ItemGroup>
+				<ProjectReference Include="$(HaleyIOC)\HaleyIOC.csproj">
+					<Name>HaleyExtensions</Name>
+				</ProjectReference>
+			</ItemGroup>
+		</When>
+		<Otherwise>
+			<ItemGroup>
+				<PackageReference Include="Haley.IOC" Version="3.0.3" />
+			</ItemGroup>
+		</Otherwise>
+	</Choose>
 </Project>
