--- a/HaleyMVVM/HaleyMVVM.csproj
+++ b/HaleyMVVM/HaleyMVVM.csproj
@@ -4,7 +4,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>Haley.MVVM</AssemblyName>
     <RootNamespace>Haley.MVVM</RootNamespace>
-    <Version>6.1.11</Version>
+    <Version>6.2.0</Version>
     <Authors>The Haley Project</Authors>
     <Product>Haley MVVM Core</Product>
     <Company>TheHaleyProject</Company>
@@ -115,7 +115,23 @@
   </ItemGroup>
 
   <Import Project="$(SolutionDir)ProjectReferences_$(SolutionName).txt" Condition="Exists('$(SolutionDir)ProjectReferences_$(SolutionName).txt')" />
-<Choose>
+
+	<Choose>
+		<When Condition="Exists($(HaleyAbstractions))">
+			<ItemGroup>
+				<ProjectReference Include="$(HaleyAbstractions)\HaleyAbstractions.csproj">
+					<Name>HaleyAbstractions</Name>
+				</ProjectReference>
+			</ItemGroup>
+		</When>
+		<Otherwise>
+			<ItemGroup>
+				<PackageReference Include="Haley.Abstractions" Version="1.0.3" />
+			</ItemGroup>
+		</Otherwise>
+	</Choose>
+	
+	<Choose>
     <When Condition="Exists($(HaleyExtensions))">
       <ItemGroup>
         <ProjectReference Include="$(HaleyExtensions)\HaleyExtensions.csproj">
@@ -125,7 +141,7 @@
     </When>
     <Otherwise>
      <ItemGroup>
-       <PackageReference Include="Haley.Extensions" Version="2.1.0" />
+       <PackageReference Include="Haley.Extensions" Version="2.1.4" />
 	 </ItemGroup>
     </Otherwise>
 </Choose>  
@@ -140,7 +156,7 @@
     </When>
     <Otherwise>
      <ItemGroup>
-       <PackageReference Include="Haley.IOC" Version="3.0.3" />
+       <PackageReference Include="Haley.IOC" Version="3.0.5" />
 	 </ItemGroup>
     </Otherwise>
 </Choose>  
