--- a/_TESTING/NotificationDemo/NotificationDemo.csproj
+++ b/_TESTING/NotificationDemo/NotificationDemo.csproj
@@ -159,6 +159,20 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)ProjectReferences_$(SolutionName).txt" Condition="Exists('$(SolutionDir)ProjectReferences_$(SolutionName).txt')" />
+	<Choose>
+		<When Condition="Exists($(HaleyAbstractions))">
+			<ItemGroup>
+				<ProjectReference Include="$(HaleyAbstractions)\HaleyAbstractions.csproj">
+					<Name>HaleyAbstractions</Name>
+				</ProjectReference>
+			</ItemGroup>
+		</When>
+		<Otherwise>
+			<ItemGroup>
+				<PackageReference Include="Haley.Abstractions" Version="1.0.0" />
+			</ItemGroup>
+		</Otherwise>
+	</Choose>
   <Choose>
     <When Condition="Exists($(HaleyMVVM))">
       <ItemGroup>
@@ -174,33 +188,32 @@
       </ItemGroup>
     </Otherwise>
   </Choose>
-	<Choose>
-		<When Condition="Exists($(HaleyExtensions))">
-			<ItemGroup>
-				<ProjectReference Include="$(HaleyExtensions)\HaleyExtensions.csproj">
-					<Name>HaleyExtensions</Name>
-				</ProjectReference>
-			</ItemGroup>
-		</When>
-		<Otherwise>
-			<ItemGroup>
-				<PackageReference Include="Haley.Extensions" Version="2.1.0" />
-			</ItemGroup>
-		</Otherwise>
-	</Choose>
-
-	<Choose>
-		<When Condition="Exists($(HaleyIOC))">
-			<ItemGroup>
-				<ProjectReference Include="$(HaleyIOC)\HaleyIOC.csproj">
-					<Name>HaleyExtensions</Name>
-				</ProjectReference>
-			</ItemGroup>
-		</When>
-		<Otherwise>
-			<ItemGroup>
-				<PackageReference Include="Haley.IOC" Version="3.0.3" />
-			</ItemGroup>
-		</Otherwise>
-	</Choose>
+  <Choose>
+    <When Condition="Exists($(HaleyExtensions))">
+      <ItemGroup>
+        <ProjectReference Include="$(HaleyExtensions)\HaleyExtensions.csproj">
+          <Name>HaleyExtensions</Name>
+        </ProjectReference>
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <ItemGroup>
+        <PackageReference Include="Haley.Extensions" Version="2.1.0" />
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
+  <Choose>
+    <When Condition="Exists($(HaleyIOC))">
+      <ItemGroup>
+        <ProjectReference Include="$(HaleyIOC)\HaleyIOC.csproj">
+          <Name>HaleyExtensions</Name>
+        </ProjectReference>
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <ItemGroup>
+        <PackageReference Include="Haley.IOC" Version="3.0.3" />
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
 </Project>
