--- a/HaleyMVVM.Test/HaleyMVVM.Test.csproj
+++ b/HaleyMVVM.Test/HaleyMVVM.Test.csproj
@@ -20,6 +20,22 @@
   </ItemGroup>
 
 	<Import Project="$(SolutionDir)ProjectReferences_$(SolutionName).txt" Condition="Exists('$(SolutionDir)ProjectReferences_$(SolutionName).txt')" />
+
+	<Choose>
+		<When Condition="Exists($(HaleyAbstractions))">
+			<ItemGroup>
+				<ProjectReference Include="$(HaleyAbstractions)\HaleyAbstractions.csproj">
+					<Name>HaleyAbstractions</Name>
+				</ProjectReference>
+			</ItemGroup>
+		</When>
+		<Otherwise>
+			<ItemGroup>
+				<PackageReference Include="Haley.Abstractions" Version="1.0.12" />
+			</ItemGroup>
+		</Otherwise>
+	</Choose>
+	
 	<Choose>
 		<When Condition="Exists($(HaleyExtensions))">
 			<ItemGroup>
@@ -45,7 +61,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Haley.IOC" Version="3.0.6" />
+				<PackageReference Include="Haley.IOC" Version="3.0.8" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
@@ -60,7 +76,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Haley.MVVM" Version="6.2.6" />
+				<PackageReference Include="Haley.MVVM" Version="6.2.10" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
@@ -75,7 +91,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Haley.Events" Version="2.1.4" />
+				<PackageReference Include="Haley.Events" Version="2.1.5" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
