--- a/HaleyMVVM/HaleyMVVM.csproj
+++ b/HaleyMVVM/HaleyMVVM.csproj
@@ -4,7 +4,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>Haley.MVVM</AssemblyName>
     <RootNamespace>Haley.MVVM</RootNamespace>
-    <Version>6.2.13</Version>
+    <Version>6.2.14</Version>
     <Authors>The Haley Project</Authors>
     <Product>Haley MVVM Core</Product>
     <Company>TheHaleyProject</Company>
@@ -126,10 +126,25 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Haley.Abstractions" Version="1.0.12" />
+				<PackageReference Include="Haley.Abstractions" Version="1.0.13" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
+	
+	<!--<Choose>
+		<When Condition="Exists($(HaleyEvents))">
+			<ItemGroup>
+				<ProjectReference Include="$(HaleyEvents)\HaleyEvents.csproj">
+					<Name>HaleyEvents</Name>
+				</ProjectReference>
+			</ItemGroup>
+		</When>
+		<Otherwise>
+			<ItemGroup>
+				<PackageReference Include="Haley.Events" Version="2.1.4" />
+			</ItemGroup>
+		</Otherwise>
+	</Choose>-->
 	
 	<Choose>
     <When Condition="Exists($(HaleyExtensions))">
@@ -156,7 +171,7 @@
     </When>
     <Otherwise>
      <ItemGroup>
-       <PackageReference Include="Haley.IOC" Version="3.0.8" />
+       <PackageReference Include="Haley.IOC" Version="3.0.9" />
 	 </ItemGroup>
     </Otherwise>
 </Choose>  
