--- a/HaleyMVVM/HaleyMVVM.csproj
+++ b/HaleyMVVM/HaleyMVVM.csproj
@@ -4,7 +4,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>Haley.MVVM</AssemblyName>
     <RootNamespace>Haley.MVVM</RootNamespace>
-    <Version>6.2.15</Version>
+    <Version>6.2.16</Version>
     <Authors>The Haley Project</Authors>
     <Product>Haley MVVM Core</Product>
     <Company>TheHaleyProject</Company>
@@ -126,7 +126,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Haley.Abstractions" Version="1.0.13" />
+				<PackageReference Include="Haley.Abstractions" Version="1.0.14" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
@@ -145,7 +145,22 @@
 			</ItemGroup>
 		</Otherwise>
 	</Choose>-->
-	
+
+	<Choose>
+		<When Condition="Exists($(HaleyHelpers))">
+			<ItemGroup>
+				<ProjectReference Include="$(HaleyHelpers)\HaleyHelpers.csproj">
+					<Name>HaleyExtensions</Name>
+				</ProjectReference>
+			</ItemGroup>
+		</When>
+		<Otherwise>
+			<ItemGroup>
+				<PackageReference Include="Haley.Helpers" Version="2.1.4" />
+			</ItemGroup>
+		</Otherwise>
+	</Choose>
+
 	<Choose>
     <When Condition="Exists($(HaleyExtensions))">
       <ItemGroup>
@@ -156,7 +171,7 @@
     </When>
     <Otherwise>
      <ItemGroup>
-       <PackageReference Include="Haley.Extensions" Version="2.1.7" />
+       <PackageReference Include="Haley.Extensions" Version="2.1.10" />
 	 </ItemGroup>
     </Otherwise>
 </Choose>  
