--- a/HaleyMVVM/HaleyMVVM.csproj
+++ b/HaleyMVVM/HaleyMVVM.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-	<TargetFrameworks>net461;netcoreapp3.1</TargetFrameworks>
+	<TargetFrameworks>net462;netcoreapp3.1;net5.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <AssemblyName>Haley.MVVM</AssemblyName>
     <RootNamespace>Haley.MVVM</RootNamespace>
-    <Version>6.2.17</Version>
+    <Version>6.2.18</Version>
     <Authors>The Haley Project</Authors>
     <Product>Haley MVVM Core</Product>
     <Company>TheHaleyProject</Company>
@@ -126,7 +126,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Haley.Abstractions" Version="1.0.16-beta3" />
+				<PackageReference Include="Haley.Abstractions" Version="1.0.16" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
@@ -186,7 +186,7 @@
     </When>
     <Otherwise>
      <ItemGroup>
-       <PackageReference Include="Haley.IOC" Version="3.0.10-beta2" />
+       <PackageReference Include="Haley.IOC" Version="3.0.10" />
 	 </ItemGroup>
     </Otherwise>
 </Choose>  
