--- a/HaleyMVVM/HaleyMVVM.csproj
+++ b/HaleyMVVM/HaleyMVVM.csproj
@@ -4,7 +4,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>Haley.MVVM</AssemblyName>
     <RootNamespace>Haley.MVVM</RootNamespace>
-    <Version>6.2.21-beta2</Version>
+    <Version>6.2.21</Version>
     <Authors>The Haley Project</Authors>
     <Product>Haley MVVM Core</Product>
     <Company>TheHaleyProject</Company>
@@ -126,7 +126,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Haley.Abstractions" Version="1.0.17.4" />
+				<PackageReference Include="Haley.Abstractions" Version="1.0.17.5" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
@@ -156,7 +156,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Haley.Helpers" Version="2.1.7.6-beta2" />
+				<PackageReference Include="Haley.Helpers" Version="2.1.8" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
@@ -171,7 +171,7 @@
     </When>
     <Otherwise>
      <ItemGroup>
-       <PackageReference Include="Haley.Extensions" Version="2.1.13-beta1" />
+       <PackageReference Include="Haley.Extensions" Version="2.1.13" />
 	 </ItemGroup>
     </Otherwise>
 </Choose>  
@@ -186,7 +186,7 @@
     </When>
     <Otherwise>
      <ItemGroup>
-       <PackageReference Include="Haley.IOC" Version="3.0.12" />
+       <PackageReference Include="Haley.IOC" Version="3.0.12.1" />
 	 </ItemGroup>
     </Otherwise>
 </Choose>  
