--- a/HaleyMVVM/HaleyMVVM.csproj
+++ b/HaleyMVVM/HaleyMVVM.csproj
@@ -4,7 +4,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>Haley.MVVM</AssemblyName>
     <RootNamespace>Haley.MVVM</RootNamespace>
-    <Version>6.2.21.1</Version>
+    <Version>6.2.21.2-beta1</Version>
     <Authors>The Haley Project</Authors>
     <Product>Haley MVVM Core</Product>
     <Company>TheHaleyProject</Company>
@@ -15,7 +15,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Haley @ 2020</Copyright>
     <PackageReleaseNotes>Theme Service updated</PackageReleaseNotes>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <AssemblyVersion>4.0.2.0</AssemblyVersion>
     <FileVersion>4.0.2.0</FileVersion>
     <PackageIcon>Haley.png</PackageIcon>
@@ -126,7 +126,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Haley.Abstractions" Version="1.0.17.5" />
+				<PackageReference Include="Haley.Abstractions" Version="1.0.18-beta1" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
@@ -156,7 +156,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Haley.Helpers" Version="2.1.8" />
+				<PackageReference Include="Haley.Helpers" Version="2.1.8.1-beta1" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
@@ -171,7 +171,7 @@
     </When>
     <Otherwise>
      <ItemGroup>
-       <PackageReference Include="Haley.Extensions" Version="2.1.13" />
+       <PackageReference Include="Haley.Extensions" Version="2.1.14-beta1" />
 	 </ItemGroup>
     </Otherwise>
 </Choose>  
@@ -186,7 +186,7 @@
     </When>
     <Otherwise>
      <ItemGroup>
-       <PackageReference Include="Haley.IOC" Version="3.0.12.1" />
+       <PackageReference Include="Haley.IOC" Version="3.0.12.2-beta1" />
 	 </ItemGroup>
     </Otherwise>
 </Choose>  
